--- a/src/TC.CloudGames.CrossCutting.IoC/TC.CloudGames.CrossCutting.IoC.csproj
+++ b/src/TC.CloudGames.CrossCutting.IoC/TC.CloudGames.CrossCutting.IoC.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TC.CloudGames.Application\TC.CloudGames.Application.csproj" />
+    <ProjectReference Include="..\TC.CloudGames.CrossCutting.Commons\TC.CloudGames.CrossCutting.Commons.csproj" />
     <ProjectReference Include="..\TC.CloudGames.Domain\TC.CloudGames.Domain.csproj" />
+    <ProjectReference Include="..\TC.CloudGames.Infra.Data\TC.CloudGames.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
