--- a/src/TC.CloudGames.Infra.CrossCutting.IoC/TC.CloudGames.Infra.CrossCutting.IoC.csproj
+++ b/src/TC.CloudGames.Infra.CrossCutting.IoC/TC.CloudGames.Infra.CrossCutting.IoC.csproj
@@ -15,8 +15,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TC.CloudGames.Application\TC.CloudGames.Application.csproj" />
-    <ProjectReference Include="..\TC.CloudGames.CrossCutting.Commons\TC.CloudGames.CrossCutting.Commons.csproj" />
     <ProjectReference Include="..\TC.CloudGames.Domain\TC.CloudGames.Domain.csproj" />
+    <ProjectReference Include="..\TC.CloudGames.Infra.CrossCutting.Commons\TC.CloudGames.Infra.CrossCutting.Commons.csproj" />
     <ProjectReference Include="..\TC.CloudGames.Infra.Data\TC.CloudGames.Infra.Data.csproj" />
   </ItemGroup>
 
